Edited wiki page Features through web user interface.

--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -32,7 +32,9 @@ Add your content here.
     * images
   * Direct Open File (WebDAV)
   * Filemanager integration (?)
+  * App integration (PIM (Contacts, Tasks), Browser (Bookmarks))
 = Maintaining =
+  * Changelog
   * Versions
   * Smart archiving
   * Distibuted backup (to gdive+dopbox+...)
@@ -40,8 +42,11 @@ Add your content here.
   * Partial/splited tarball/iso
   * Merging archives
 = Services =
+  * Documents
   * Contacts
   * Tasks
+  * Bookmarks
+  * Libary (FB2, PDF, HTML)
   * Media (audio/video/image)
   * Email archive
   * DoxGen
