Edited wiki page Tips through web user interface.

--- a/wiki/Tips.wiki
+++ b/wiki/Tips.wiki
@@ -3,8 +3,11 @@
 = Core =
   * Achive handling (as foldes)
   * DB independency
+  * WebDAV: etags
+  * Copy metadata to xargs
 
 = WebUI =
 
   * Taglists: show used tags only
   * Visual scheme view and edit
+  * iconed tag groups
