--- a/wiki/Idea.wiki
+++ b/wiki/Idea.wiki
@@ -23,10 +23,6 @@ Simpler:
   * Node things:
     * parms (name, type, multiplicity, default)
     * resriction/trigger (e.g. Fork - "onceate: add 2+ edges of ...)
-  * Edges:
-    * compatibility matrix (frm>to)
-    * parms
-    * restrictions
 
 = Specification =
 
@@ -38,28 +34,33 @@ Simpler:
 == DB structure ==
 === Nodes ===
   * /
+    * parms: None
+    * constraints: None
   * Facet
-  * Tag:
-    * Group:
-      * must contain Dummy/Ordinar (1:M)
-      * parms:
-        * multiple:bool - multiple tags of this taggroup can be applied to File
-        * mandatory:bool
-    * Dummy: (bridge, intemediate)
-      * must contain Dummy(1:M)/Ordinar(1:M)
-    * Ordinar:
-      * can contain File(M:M)/Group(M:M)/Dummy(1:M)/Ordinar(1:M)
+    must contain Dummy/Ordinar (1:M)
+    * parms:
+      * multiple:bool - multiple tags of this taggroup can be applied to File
+      * mandatory:bool[?]=<default>
+    * constraints: None
+  * Branch: (fork/cross/junk/branch/intermediate)
+    * must contain Dummy(1:M)/Ordinar(1:M)
+    * parms:
+    * constraints: None
+      * oncreate: add 2+ edges of ...
+  * Folder:
+    can contain File(M:M)/Group(M:M)/Dummy(1:M)/Ordinar(1:M)
+    * parms: None
+    * constraints: None
   * File:
     * parms:
       * size
       * md5
       * filename
-  * Other:
-    * bookmark
-    * phone
-    * contact
-    * task
+    * restrictions:
 === Edges ===
+  * compatibility matrix (frm>to)
+  * parms
+  * restrictions
   ? / -> Tag
   * / -> TagGroup (1:M): the only edge from /; name = 'taggroup' (???).
   * TagGroup -> Tag (1:M): the only edge to Tag; name = 'include'.
