--- a/wiki/Idea.wiki
+++ b/wiki/Idea.wiki
@@ -13,54 +13,40 @@ Simpler:
   * some folders can't contain files
   * file can be in some folders in simultaneously
 
-= todo =
-  * Nodes:
-    * /
-    * Facet
-    * Развилка (Fork/cross/junk/branch)
-    * Folder
-    * File
-  * Node things:
-    * parms (name, type, multiplicity, default)
-    * resriction/trigger (e.g. Fork - "onceate: add 2+ edges of ...)
-
 = Specification =
 
 == Queries ==
   * set current folder
-  * get used subfolders
+  * get used facets
   * get available subfolders
 
 == DB structure ==
 === Nodes ===
-  * /
-    * parms: None
-    * constraints: None
-  * Facet
-    must contain Dummy/Ordinar (1:M)
-    * parms:
+  * */*
+    * _parms_: None
+    * _constraints_: None
+  * *Facet*: _must_ contain Dummy/Ordinar (1:M)
+    * _parms_:
       * multiple:bool - multiple tags of this taggroup can be applied to File
       * mandatory:bool[?]=<default>
-    * constraints: None
-  * Branch: (fork/cross/junk/branch/intermediate)
-    * must contain Dummy(1:M)/Ordinar(1:M)
-    * parms:
-    * constraints: None
+    * _constraints_: None
+  * *Branch*: (fork/cross/junk/branch/intermediate) - _must_ contain Dummy(1:M)/Ordinar(1:M).
+    * _parms_:
+    * _constraints_: None
       * oncreate: add 2+ edges of ...
-  * Folder:
-    can contain File(M:M)/Group(M:M)/Dummy(1:M)/Ordinar(1:M)
-    * parms: None
-    * constraints: None
-  * File:
-    * parms:
-      * size
-      * md5
-      * filename
-    * restrictions:
+  * *Folder*: _can_ contain File(M:M)/Group(M:M)/Dummy(1:M)/Ordinar(1:M)
+    * _parms_: None
+    * _constraints_: None
+  * *File*:
+    * _parms_:
+      * size:int = 0
+      * md5:uint128
+      * filename:str
+    * _constraints_: None
 === Edges ===
   * compatibility matrix (frm>to)
-  * parms
-  * restrictions
+  * _parms_
+  * _constraints_: None
   ? / -> Tag
   * / -> TagGroup (1:M): the only edge from /; name = 'taggroup' (???).
   * TagGroup -> Tag (1:M): the only edge to Tag; name = 'include'.
