--- a/wiki/Idea.wiki
+++ b/wiki/Idea.wiki
@@ -39,27 +39,24 @@ Simpler:
     * _constraints_: None
   * *File*:
     * _parms_:
-      * size:int = 0
+      * size:int
       * md5:uint128
       * filename:str
     * _constraints_: None
 === Edges ===
 Compatibility matrix:
 || F\T    || / || Facet || Branch || Folder || File ||
-|| /      || - || - || - || - || - ||
-|| Facet  || - || - || - || - || - ||
-|| Branch || - || - || - || - || - ||
-|| Folder || - || - || - || - || - ||
-|| File   || - || - || - || - || - ||
-  ? / -> Tag
-  * / -> TagGroup (1:M): the only edge from /; name = 'taggroup' (???).
-  * TagGroup -> Tag (1:M): the only edge to Tag; name = 'include'.
+|| /      || - ||       ||        ||        ||      ||
+|| Facet  || - ||   -   ||   +    ||   +    ||  -   ||
+|| Branch || - ||       ||   +    ||   +    ||  -   ||
+|| Folder || - ||   +   ||   +    ||   +    ||  +   ||
+|| File   || - ||   -   ||   -    ||   -    ||  +   ||
+  * / -> Facet (1:M): the only edge from /; name = 'taggroup' (???).
+  * Facet -> Tag (1:M): the only edge to Tag; name = 'include'.
   * Tag -> Tag (1:M): nested tags if File can be as in parent as in child tag (e.g. DocType -> DocSubType).
-  * Tag -> TagGroup (?:M (!)): qualification; name='...' (or Taggroup -> Tag name="OnlyFor")
+  * Tag -> Facet (?:M (!)): qualification; name='...' (or Facet -> Tag name="OnlyFor")
   * Tag -> File (M:M): name='tag (or file)'
-==== depricated ====
-  * TagGroup -> File
-=== Resrictions ===
+=== Constraints ===
   * Tags structure is srictly hierachical.
   * Tag name is unique in its parent (TagGroup/Tag)
   * for multitags: File can't has as Tag as it's child/parent simultaneously
