--- a/wiki/Try.wiki
+++ b/wiki/Try.wiki
@@ -1,7 +1,6 @@
 #summary Things to try.
 
-= Wiki =
-
+  * [https://github.com/ralphbean/apps.fp.o Fedora Apps]
   * [https://fedoraproject.org/wiki/Converting_wiki_to_DocBook_XML wiki2docbook]
   * [http://johnmacfarlane.net/pandoc/ pandoc]
   * [http://habrahabr.ru/post/176897/ bootstrap-wisywyg]
