--- a/wiki/ru/Description.wiki
+++ b/wiki/ru/Description.wiki
@@ -1,7 +1,8 @@
 #summary Описание.
 
 = Принцип =
-Если кратко - система хранения файлов с контекстной [http://ru.wikipedia.org/wiki/%D0%A4%D0%B0%D1%81%D0%B5%D1%82%D0%BD%D0%B0%D1%8F_%D0%BA%D0%BB%D0%B0%D1%81%D1%81%D0%B8%D1%84%D0%B8%D0%BA%D0%B0%D1%86%D0%B8%D1%8F фасетной классификацией].
+Если кратко - система хранения файлов с контекстной [http://ru.wikipedia.org/wiki/%D0%A4%D0%B0%D1%81%D0%B5%D1%82%D0%BD%D0%B0%D1%8F_%D0%BA%D0%BB%D0%B0%D1%81%D1%81%D0%B8%D1%84%D0%B8%D0%BA%D0%B0%D1%86%D0%B8%D1%8F фасетной классификацией] (ну или [http://fakit.narod.ru/uch2003/p4_2_1_2.html так]) - в противоположность обычной иерархической (папки-подпапки).
+
 Развернуто:
   * Файлам назначаются ярлыки (несколько)
   * Ярлыки могут быть вложены.
@@ -20,14 +21,14 @@
 Ярлыки могут быть вложены (подчинены друг другу).
 Ярлыки могут быть назначаемы файлам или же не назначаемы (развилка).
 Ярлыки могут иметь фасеты.
-Схема ярлыков изменяется не польльзователем, а администратором системы (т.н. экспертная классификация).
+Схема ярлыков изменяется не пользователем, а администратором системы (т.н. экспертная классификация).
 
 == 3. Фасета ==
 Именованная группа ярлыков.
 Сами фасеты не могут быть привязаны к файлам - только их ярлыки.
 При привязывании фасеты к ярлыку могут быть указаны параметры:
-  * множественность (да/нет) - файлу может быть назначено несолько тегов фасеты одновременно.
-  * наследуемость - фасета применима к тегу и всем вложенным тегам.
+  * множественность (да/нет) - файлу может быть назначено несколько ярлыков фасеты одновременно.
+  * наследуемость - фасета применима к ярлык и всем вложенным ярлыкам.
   * обязательность - фасета обязательна при выборе ярлыка.
 
 == 4. Файл ==
@@ -36,20 +37,25 @@
 = Пример =
 На верхнем уровне имеем 2 ярлыка - "Программы" и "Документы" (можно сказать, что корень - это фасета верхнего уровня).
 Эти ярлыки - не множественные (т.е. файл может быть или в Программах или в Документах - но не одновременно), наследуемые, обязательные (соответственно - файл не может не иметь ярлыка).
+
 Ярлык "Документы" имеет три фасеты - "Отдел", "Исполнитель" (множественные, наследуемые, необязательные) и Вид (не множественный, наследуемый, необязательный).
+
 "Вид" документа - Образец, Инструкция, Отчет, Первичка (Счет, Акт, ТТН, СФ), Отчетность (Баланс, Декларация).
+
 Здесь Первичка и Отчетность - развилки, т.е. их нельзя назначить файлам, можно назначить только вложенные в них ярлыки.
+
 Кроме того - у ярлыка Отчетность есть контекстные фасеты - Год (2000..2013) и Квартал (1..4) - немножественные, наследуемые, обязательные.
 Соответственно - если документ относится к Отчетности - то необходимо обязательно указать год (один) и квартал (один).
+
 Как вариант - некоторые типы документов (бухгальтерские) можно вынести в фасету, привязанную к отделу "Бухгалтерия".
 Тогда при назначении документу ярлыка "Бухгалтерия" станет доступно назначение документу вида бухгалтерского документа.
 
 = Порядок работы =
   # Разрисовываем схему ярлыков (подчиненность, фасеты).
-  # Закидываем файлы во входящие
-  # Проставляем каждому нужные ярлыки
-  # При поиске файла:
+  # Закидываем файлы во Входящие
+  # Проставляем каждому нужные ярлыки. Файл с проставленными ярлыками автоматически переносится из Входящих в Архив.
+  # При поиске файла в Архиве:
     # выбираем ярлык верхнего уровня
-    # появляются фасеты
+    # появляются фасеты этого ярлыка.
     # выбираем ярлыки из этих фасет (уточняем область поиска)
     # появляются новые фасеты...
