--- a/wiki/Idea.wiki
+++ b/wiki/Idea.wiki
@@ -88,6 +88,7 @@ Compatibility matrix:
 === Questions ===
   * Move TagGroup through hierarchy (up-down)
   * / = Tag | Facet?
+  * Tag(file=bool) == Facet?
   * Super-node Class? (Tag/File etc)
   * Really srict hierarchy of tags?
   * Must depricate X-tags upper then defined level (like - music tags and documens ones)
