--- a/wiki/ru/Description.wiki
+++ b/wiki/ru/Description.wiki
@@ -59,3 +59,6 @@
     # появляются фасеты этого ярлыка.
     # выбираем ярлыки из этих фасет (уточняем область поиска)
     # появляются новые фасеты...
+
+= Примечания =
+  * Возможно - фасета и тег-развилка - это одно и то же.
