--- a/wiki/ru/Description.wiki
+++ b/wiki/ru/Description.wiki
@@ -23,8 +23,8 @@
 Ярлыки могут иметь фасеты.
 Схема ярлыков изменяется не пользователем, а администратором системы (т.н. экспертная классификация).
 
-== 3. Фасета ==
-Именованная группа ярлыков.
+== 3. Фасет ==
+Именованная группа ярлыков. Можно еще сказать - категория.
 Сами фасеты не могут быть привязаны к файлам - только их ярлыки.
 При привязывании фасеты к ярлыку могут быть указаны параметры:
   * множественность (да/нет) - файлу может быть назначено несколько ярлыков фасеты одновременно.
@@ -62,3 +62,4 @@
 
 = Примечания =
   * Возможно - фасета и тег-развилка - это одно и то же.
+  * Фасет - м.р. тащемта
