--- a/wiki/ru/Description.wiki
+++ b/wiki/ru/Description.wiki
@@ -24,7 +24,7 @@
 Схема ярлыков изменяется не пользователем, а администратором системы (т.н. экспертная классификация).
 
 == 3. Фасет ==
-Именованная группа ярлыков. Можно еще сказать - категория.
+Именованная группа ярлыков. Можно еще сказать - категория, признак.
 Сами фасеты не могут быть привязаны к файлам - только их ярлыки.
 При привязывании фасеты к ярлыку могут быть указаны параметры:
   * множественность (да/нет) - файлу может быть назначено несколько ярлыков фасеты одновременно.
