--- a/wiki/ru/Description.wiki
+++ b/wiki/ru/Description.wiki
@@ -19,17 +19,17 @@
 == 2. Ярлык ==
 Просто метка.
 Ярлыки могут быть вложены (подчинены друг другу).
-Ярлыки могут быть назначаемы файлам или же не назначаемы (развилка).
+Ярлыки могут быть назначаемы файлам или же не назначаемы (ярлык-развилка) (== фасет?).
 Ярлыки могут иметь фасеты.
 Схема ярлыков изменяется не пользователем, а администратором системы (т.н. экспертная классификация).
 
 == 3. Фасет ==
 Именованная группа ярлыков. Можно еще сказать - категория, признак.
 Сами фасеты не могут быть привязаны к файлам - только их ярлыки.
-При привязывании фасеты к ярлыку могут быть указаны параметры:
-  * множественность (да/нет) - файлу может быть назначено несколько ярлыков фасеты одновременно.
-  * наследуемость - фасета применима к ярлык и всем вложенным ярлыкам.
-  * обязательность - фасета обязательна при выборе ярлыка.
+При привязывании фасета к ярлыку могут быть указаны параметры:
+  * множественность (да/нет) - файлу может быть назначено несколько ярлыков фасета одновременно.
+  * наследуемость - фасет применим как к ярлыку-хозяину (точне - к файлам, помеченным этим ярлыком) - так и ко всем вложенным в него (ярлык-хозяин) ярлыкам.
+  * обязательность - фасет обязателен при выборе ярлыка-хозяина.
 
 == 4. Файл ==
 Файл, собственно. К нему ярлыки и привязываются.
@@ -61,5 +61,4 @@
     # появляются новые фасеты...
 
 = Примечания =
-  * Возможно - фасета и тег-развилка - это одно и то же.
   * Фасет - м.р. тащемта
