--- a/wiki/ru/Description.wiki
+++ b/wiki/ru/Description.wiki
@@ -12,15 +12,17 @@
 = Объекты =
 == 1. Корень ==
 Начальная точка путешествия по файлам.
-Может включать ярлыки или фасеты.
+Можно считать тегом верхнего уровня (может включать и ярлыки и фасеты).
+
 Выбором ярлыка/ов мы ограничиваем область поиска.
+
 Добавлением ярылков к уже выбранным область поиска сужается.
 
 == 2. Ярлык ==
 Просто метка.
-Ярлыки могут быть вложены (подчинены друг другу).
-Ярлыки могут быть назначаемы файлам или же не назначаемы (ярлык-развилка) (== фасет?).
-Ярлыки могут иметь фасеты.
+
+Ярлыки могут включать другие ярлыки (подчиненные/вложенные) и/или фасеты.
+
 Схема ярлыков изменяется не пользователем, а администратором системы (т.н. экспертная классификация).
 
 == 3. Фасет ==
@@ -29,7 +31,7 @@
 При привязывании фасета к ярлыку могут быть указаны параметры:
   * множественность (да/нет) - файлу может быть назначено несколько ярлыков фасета одновременно.
   * наследуемость - фасет применим как к ярлыку-хозяину (точне - к файлам, помеченным этим ярлыком) - так и ко всем вложенным в него (ярлык-хозяин) ярлыкам.
-  * обязательность - фасет обязателен при выборе ярлыка-хозяина.
+  * обязательность - фасет обязателен при выборе ярлыка-хозяина (и к вложенным, если фасет - наследуемый).
 
 == 4. Файл ==
 Файл, собственно. К нему ярлыки и привязываются.
