--- a/wiki/ru/Description.wiki
+++ b/wiki/ru/Description.wiki
@@ -1,7 +1,7 @@
 #summary Описание.
 
 = Принцип =
-Если кратко - система хранения файлов с контекстной [http://ru.wikipedia.org/wiki/%D0%A4%D0%B0%D1%81%D0%B5%D1%82%D0%BD%D0%B0%D1%8F_%D0%BA%D0%BB%D0%B0%D1%81%D1%81%D0%B8%D1%84%D0%B8%D0%BA%D0%B0%D1%86%D0%B8%D1%8F фасетной классификацией] (ну или [http://fakit.narod.ru/uch2003/p4_2_1_2.html так]) - в противоположность обычной иерархической (папки-подпапки).
+Если кратко - система хранения файлов с _контекстной_ [http://ru.wikipedia.org/wiki/%D0%A4%D0%B0%D1%81%D0%B5%D1%82%D0%BD%D0%B0%D1%8F_%D0%BA%D0%BB%D0%B0%D1%81%D1%81%D0%B8%D1%84%D0%B8%D0%BA%D0%B0%D1%86%D0%B8%D1%8F фасетной классификацией] (ну или [http://fakit.narod.ru/uch2003/p4_2_1_2.html так]) - в противоположность обычной иерархической (папки-подпапки).
 
 Развернуто:
   * Файлам назначаются ярлыки (несколько)
@@ -20,18 +20,19 @@
 
 == 2. Ярлык ==
 Просто метка.
-
-Ярлыки могут включать другие ярлыки (подчиненные/вложенные) и/или фасеты.
-
-Схема ярлыков изменяется не пользователем, а администратором системы (т.н. экспертная классификация).
+  * Ярлыки могут включать другие ярлыки (подчиненные/вложенные) и/или фасеты.
+  * Схема ярлыков изменяется не пользователем, а администратором системы (т.н. экспертная классификация) - т.е. пользователь не может с бухы-барахты внезапно придумать новые ярлыки и/или фасеты.
 
 == 3. Фасет ==
 Именованная группа ярлыков. Можно еще сказать - категория, признак.
-Сами фасеты не могут быть привязаны к файлам - только их ярлыки.
-При привязывании фасета к ярлыку могут быть указаны параметры:
-  * множественность (да/нет) - файлу может быть назначено несколько ярлыков фасета одновременно.
-  * наследуемость - фасет применим как к ярлыку-хозяину (точне - к файлам, помеченным этим ярлыком) - так и ко всем вложенным в него (ярлык-хозяин) ярлыкам.
-  * обязательность - фасет обязателен при выборе ярлыка-хозяина (и к вложенным, если фасет - наследуемый).
+
+В принципе - нечто подобное Ярлыкам с вложенными ярлыками - но с тремя отличиями:
+  * Ярлыки могут быть назначены файлам, а фасеты - нет.
+  * Подчиненный/вложенный Ярлык может подчиняться/входить_в только одному верхнему Ярлыку, а фасеты - многим.
+  * Ярлыки не имеют условий, а фасеты - да:
+    * множественность (да/нет) - файлу может быть назначено несколько ярлыков фасета одновременно.
+    * наследуемость - фасет применим как к ярлыку-хозяину (точне - к файлам, помеченным этим ярлыком) - так и ко всем вложенным в него (ярлык-хозяин) ярлыкам.
+    * обязательность - фасет обязателен при выборе ярлыка-хозяина (и к вложенным, если фасет - наследуемый).
 
 == 4. Файл ==
 Файл, собственно. К нему ярлыки и привязываются.
@@ -53,14 +54,11 @@
 Тогда при назначении документу ярлыка "Бухгалтерия" станет доступно назначение документу вида бухгалтерского документа.
 
 = Порядок работы =
-  # Разрисовываем схему ярлыков (подчиненность, фасеты).
+  # Разрисовываем схему ярлыков и фасет.
   # Закидываем файлы во Входящие
-  # Проставляем каждому нужные ярлыки. Файл с проставленными ярлыками автоматически переносится из Входящих в Архив.
+  # Проставляем каждому файлу нужные ярлыки. Файл с проставленными ярлыками автоматически переносится из Входящих в Архив.
   # При поиске файла в Архиве:
     # выбираем ярлык верхнего уровня
     # появляются фасеты этого ярлыка.
     # выбираем ярлыки из этих фасет (уточняем область поиска)
     # появляются новые фасеты...
-
-= Примечания =
-  * Фасет - м.р. тащемта
