--- a/wiki/ru/Description.wiki
+++ b/wiki/ru/Description.wiki
@@ -21,10 +21,12 @@
 == 2. Ярлык ==
 Просто метка.
   * Ярлыки могут включать другие ярлыки (подчиненные/вложенные) и/или фасеты.
-  * Схема ярлыков изменяется не пользователем, а администратором системы (т.н. экспертная классификация) - т.е. пользователь не может с бухы-барахты внезапно придумать новые ярлыки и/или фасеты.
+  * Схема ярлыков изменяется не пользователем, а администратором системы (т.н. экспертная классификация) - т.е. пользователь не может с бухты-барахты внезапно придумать новые ярлыки и/или фасеты (т.е. придумать-то может - но толку...).
 
 == 3. Фасет ==
-Именованная группа ярлыков. Можно еще сказать - категория, признак.
+Именованная группа ярлыков.
+
+Можно еще сказать - категория, признак.
 
 В принципе - нечто подобное Ярлыкам с вложенными ярлыками - но с тремя отличиями:
   * Ярлыки могут быть назначены файлам, а фасеты - нет.
