--- a/wiki/ru/Description.wiki
+++ b/wiki/ru/Description.wiki
@@ -26,11 +26,11 @@
 == 3. Фасет ==
 Именованная группа ярлыков.
 
-Можно еще сказать - категория, признак.
+(Можно еще сказать - категория, признак.)
 
 В принципе - нечто подобное Ярлыкам с вложенными ярлыками - но с тремя отличиями:
   * Ярлыки могут быть назначены файлам, а фасеты - нет.
-  * Подчиненный/вложенный Ярлык может подчиняться/входить_в только одному верхнему Ярлыку, а фасеты - многим.
+  * Подчиненный/вложенный Ярлык может подчиняться/входить-в только одному верхнему Ярлыку, а фасеты - многим.
   * Ярлыки не имеют условий, а фасеты - да:
     * множественность (да/нет) - файлу может быть назначено несколько ярлыков фасета одновременно.
     * наследуемость - фасет применим как к ярлыку-хозяину (точне - к файлам, помеченным этим ярлыком) - так и ко всем вложенным в него (ярлык-хозяин) ярлыкам.
