tags/facets CRUD ok; tagmap ok

--- a/wiki/ru/Description.wiki
+++ b/wiki/ru/Description.wiki
@@ -20,27 +20,29 @@
 
 == 2. Ярлык ==
 Просто метка.
-  * Ярлыки могут включать другие ярлыки (подчиненные/вложенные) и/или фасеты.
+  * Ярлыки могут включать другие Ярлыки (подчиненные/вложенные) и/или фасеты.
   * Схема ярлыков изменяется не пользователем, а администратором системы (т.н. экспертная классификация) - т.е. пользователь не может с бухты-барахты внезапно придумать новые ярлыки и/или фасеты (т.е. придумать-то может - но толку...).
 
 == 3. Фасет ==
 Именованная группа ярлыков.
+(Можно еще сказать - категория, признак)
 
-(Можно еще сказать - категория, признак.)
+Параметры фасета:
+  * множественность (да/нет) - файлу может быть назначено несколько ярлыков фасета одновременно.
+  * наследуемость - фасет применим как к ярлыку-хозяину (точнее - к файлам, помеченным этим ярлыком) - так и ко всем вложенным в него (ярлык-хозяин) ярлыкам.
+  * обязательность - фасет обязателен при выборе ярлыка-хозяина (и к вложенным, если фасет - наследуемый).
 
-В принципе - нечто подобное Ярлыкам с вложенными ярлыками - но с тремя отличиями:
-  * Ярлыки могут быть назначены файлам, а фасеты - нет.
-  * Подчиненный/вложенный Ярлык может подчиняться/входить-в только одному верхнему Ярлыку, а фасеты - многим.
-  * Ярлыки не имеют условий, а фасеты - да:
-    * множественность (да/нет) - файлу может быть назначено несколько ярлыков фасета одновременно.
-    * наследуемость - фасет применим как к ярлыку-хозяину (точне - к файлам, помеченным этим ярлыком) - так и ко всем вложенным в него (ярлык-хозяин) ярлыкам.
-    * обязательность - фасет обязателен при выборе ярлыка-хозяина (и к вложенным, если фасет - наследуемый).
+Отличия фасет от ярлыков:
+  * Ярлыки могут включать и Ярлыки и Фасеты. Фасеты могут включать только Ярлыки.
+  * Ярлыки могут быть привязаны к файлам. Фасеты - нет.
+  * Подчиненный/вложенный Ярлык может быть привязан только к одному верхнему Ярлыку. Фасеты - ко многим.
+  * Ярлыки не имеют параметров (кроме имени). Фасеты - имеют.
 
 == 4. Файл ==
 Файл, собственно. К нему ярлыки и привязываются.
 
 = Пример =
-На верхнем уровне имеем 2 ярлыка - "Программы" и "Документы" (можно сказать, что корень - это фасета верхнего уровня).
+На верхнем уровне имеем 2 ярлыка - "Программы" и "Документы".
 Эти ярлыки - не множественные (т.е. файл может быть или в Программах или в Документах - но не одновременно), наследуемые, обязательные (соответственно - файл не может не иметь ярлыка).
 
 Ярлык "Документы" имеет три фасеты - "Отдел", "Исполнитель" (множественные, наследуемые, необязательные) и Вид (не множественный, наследуемый, необязательный).
@@ -52,7 +54,7 @@
 Кроме того - у ярлыка Отчетность есть контекстные фасеты - Год (2000..2013) и Квартал (1..4) - немножественные, наследуемые, обязательные.
 Соответственно - если документ относится к Отчетности - то необходимо обязательно указать год (один) и квартал (один).
 
-Как вариант - некоторые типы документов (бухгальтерские) можно вынести в фасету, привязанную к отделу "Бухгалтерия".
+Как вариант - некоторые типы документов (бухгальтерские) можно вынести в фасет, привязанный к отделу "Бухгалтерия".
 Тогда при назначении документу ярлыка "Бухгалтерия" станет доступно назначение документу вида бухгалтерского документа.
 
 = Порядок работы =
