--- a/wiki/ru/Description.wiki
+++ b/wiki/ru/Description.wiki
@@ -22,20 +22,20 @@
 Просто метка.
   * Ярлыки могут включать другие Ярлыки (подчиненные/вложенные) и/или фасеты.
   * Схема ярлыков изменяется не пользователем, а администратором системы (т.н. экспертная классификация) - т.е. пользователь не может с бухты-барахты внезапно придумать новые ярлыки и/или фасеты (т.е. придумать-то может - но толку...).
+  * Схема ярлыков и фасет - строго *иерархическая* (хотя общая схема - вместе с файлами - уже сетевая).
 
 == 3. Фасет ==
-Именованная группа ярлыков.
-(Можно еще сказать - категория, признак)
+Именованная группа ярлыков (можно еще сказать - категория, признак).
+На первом этапе фасеты - наследуемы (т.е. применимы к ярлыку и ко всем вложенным ярлыкам) и необязательны.
 
 Параметры фасета:
-  * множественность (да/нет) - файлу может быть назначено несколько ярлыков фасета одновременно.
-  * наследуемость - фасет применим как к ярлыку-хозяину (точнее - к файлам, помеченным этим ярлыком) - так и ко всем вложенным в него (ярлык-хозяин) ярлыкам.
-  * обязательность - фасет обязателен при выборе ярлыка-хозяина (и к вложенным, если фасет - наследуемый).
+  * множественность (да/нет) - файлу может быть назначено несколько ярлыков фасета одновременно. По умолчанию - нет.
+
+Note: нельзя назначить одновременна ярлык и его папу/сына.
 
 Отличия фасет от ярлыков:
-  * Ярлыки могут включать и Ярлыки и Фасеты. Фасеты могут включать только Ярлыки.
+  * Ярлыки могут включать и Ярлыки и Фасеты. Фасеты могут включать только Ярлыки (ибо нелогично).
   * Ярлыки могут быть привязаны к файлам. Фасеты - нет.
-  * Подчиненный/вложенный Ярлык может быть привязан только к одному верхнему Ярлыку. Фасеты - ко многим.
   * Ярлыки не имеют параметров (кроме имени). Фасеты - имеют.
 
 == 4. Файл ==
@@ -66,3 +66,10 @@
     # появляются фасеты этого ярлыка.
     # выбираем ярлыки из этих фасет (уточняем область поиска)
     # появляются новые фасеты...
+
+= Future =
+Параметры фасета:
+  * наследуемость - фасет применим как к ярлыку-хозяину (точнее - к файлам, помеченным этим ярлыком) - так и ко всем вложенным в него (ярлык-хозяин) ярлыкам.
+  * обязательность - фасет обязателен при выборе ярлыка-хозяина (и к вложенным, если фасет - наследуемый).
+Свойства фасета:
+  * Подчиненный/вложенный Ярлык может быть привязан только к одному верхнему Ярлыку. Фасеты - ко многим (сиреч - _не_ строго иерархическая система).
