Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -2,11 +2,16 @@
 
   * [Idea]
   * [Description]
+  * [TP Tech project]
+
 = Contrib =
+
   * [Techologies]
   * [Roadmap]
   * [ToDo]
+
 = Misc =
+
   * [Features]
   * [Tips]
   * [Try]
